--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 rightmove-webscraper @ git+https://github.com/cwilko/rightmove_webscraper.py.git
-psycopg2-binary<=2.9.6
+marketinsights-dbschema @ git+https://github.com/cwilko/marketinsights-dbschema.git
